templates/kirby3_template.yaml
---
# Source: kirby3/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-kirby3
  annotations:
  labels:
    track: "stable"
    app: release-name
    chart: "kirby3-1.0.0"
    release: release-name
    heritage: Helm
    app.kubernetes.io/name: release-name
    helm.sh/chart: "kirby3-1.0.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: release-name
spec:
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 80
    protocol: TCP
    name: web
  selector:
    app: release-name
    tier: "web"
    track: "stable"
---
# Source: kirby3/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name
  annotations:
    
    
  labels:
    track: "stable"
    tier: "web"
    app: release-name
    chart: "kirby3-1.0.0"
    release: release-name
    heritage: Helm
    app.kubernetes.io/name: release-name
    helm.sh/chart: "kirby3-1.0.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: release-name
spec:
  selector:
    matchLabels:
      app: release-name
      track: "stable"
      tier: "web"
      release: release-name
  replicas: 1
  strategy:
    type: "Recreate"
  template:
    metadata:
      annotations:
        checksum/application-secrets: ""
        
        
      labels:
        track: "stable"
        tier: "web"
        app: release-name
        chart: "kirby3-1.0.0"
        release: release-name
        heritage: Helm
        app.kubernetes.io/name: release-name
        helm.sh/chart: "kirby3-1.0.0"
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/instance: release-name
    spec:
      securityContext:
        fsGroup: 33 # www-data        
      imagePullSecrets:
          - name: gitlab-registry
      containers:
      - name: kirby3
        image: gitlab.example.com/group/project:stable
        imagePullPolicy: IfNotPresent
        ports:
        - name: "web"
          containerPort: 80
        livenessProbe:
          httpGet:
            path: /panel/login
            scheme: HTTP
            port: 80
          initialDelaySeconds: 15
          timeoutSeconds: 15
        readinessProbe:
          httpGet:
            path: /panel/login
            scheme: HTTP
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 3
        resources:
            limits:
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
        volumeMounts:
          - name: data
            mountPath: /var/www/html/content
            subPath: content
          - name: data
            mountPath: /var/www/html/storage
            subPath: storage
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: release-name-kirby3
---
# Source: kirby3/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: release-name-kirby3
  labels:
    app: release-name
    chart: "kirby3-1.0.0"
    release: release-name
    heritage: Helm
    app.kubernetes.io/name: release-name
    helm.sh/chart: "kirby3-1.0.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: release-name
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - "my.host.com"
    secretName: release-name-kirby3-tls
  rules:
  - host: "my.host.com"
    http:
      &httpRule
      paths:
      - path: "/"
        backend:
          serviceName: release-name-kirby3
          servicePort: 5000
